2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* configure.ac: Add a --enable-smime flag which defaults to "no".

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.5

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_message_part): Make sure that
	a boundary doesn't appear before we start scanning for the
	headers.

2012-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* src/uuencode.c:
	* src/uudecode.c: Moved to examples/

2012-02-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_verify): In cases where gpg does
	not exit with code 0, only set the GError when we've gotten no
	signer information from gpg (otherwise we return the list of
	signers, which will presumably include why the verification failed
	in the status of each signer). Fixes bug #668085.

2012-02-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: Fixed to behave the same as IMAP and
	also to actually work.

2012-02-16  Jeffrey Stedfast  <jeff@xamarin.com>

	* mono/Multipart.custom: Fixed the binding for Multipart.Count.

2012-02-04  Jeffrey Stedfast  <fejj@gnome.org>

	* configure.ac: Added --with-gacdir to fix bug #667072

2012-01-11  Jeffrey Stedfast  <fejj@gnome.org>

	* mono/Makefile.am: Fixed up to more closely match the gtk-sharp
	build.

	* mono/gmime-sharp.pc.in: Fixed to more closely match gtk-sharp.

2012-01-11  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-pkcs7-context.c: Fixed some switch statements to
	include a 'default' code path, fixing some compiler
	warnings. Fixes bug #667684.

2012-01-09  Ionut Biru  <ibiru@archlinux.org>

	* gmime/gmime-pkcs7-context.c: Fix compilation when S/MIME is not
	enabled.

2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.4

2012-01-08  Jeffrey Stedfast  <fejj@gnome.org>

	Fix for bug #667070
