@@ -25,6 +25,7 @@
 
 #include <string.h>
 
+#include "gmime-table-private.h"
 #include "gmime-common.h"
 
 #ifndef g_tolower
@@ -50,4 +51,40 @@ g_mime_strcase_hash (gconstpointer key)
 	}
 	
 	return h;
+}
+
+
+/**
+ * g_mime_strdup_trim:
+ * @str: The string to duplicate and trim
+ *
+ * Duplicates the given input string while also trimming leading and
+ * trailing whitespace.
+ *
+ * Returns a duplicate string, minus any leading and trailing
+ * whitespace that the original string may have contained.
+ **/
+char *
+g_mime_strdup_trim (const char *str)
+{
+	register const char *inptr = str;
+	const char *start, *end;
+	
+	while (is_lwsp (*inptr))
+		inptr++;
+	
+	start = inptr;
+	end = inptr;
+	
+	while (*inptr) {
+		while (*inptr && !is_lwsp (*inptr))
+			inptr++;
+		
+		end = inptr;
+		
+		while (is_lwsp (*inptr))
+			inptr++;
+	}
+	
+	return g_strndup (start, (size_t) (end - start));
 }
